--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # url is the full website URL
 # baseurl is the website's URL without the hostname
-url: "http://maemod-moru.github.io"
+url: "https://tanaphum.github.io/MAEMOD-MORU.github.io/"
 baseurl: ""
 
 title: Mathematical and Economic MODelling (MAEMOD)
